# vulkan_study

./: CMakeLists.txt  README.md  run.sh
HelloTriangle/: CMakeLists.txt  README.md  main.cpp  run.sh
HelloVulkan/: CMakeLists.txt  README.md  createWindow.cpp  queue.cpp  run.sh  testGLM.cpp
include/: cornell_box.hpp  minilog.hpp
libraries/glfw/build-so/examples/: boing  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
libraries/glfw/build-so/src/: libglfw.so.3.4
libraries/glfw/build-so/tests/: allocator  clipboard  cursor  empty  events  gamma  glfwinfo  icon  iconify  inputlag  joysticks  monitors  msaa  reopen  tearing  threads  timeout  title  triangle-vulkan  window
resource/: cornell_box.mtl
src/: CMakeLists.txt
src/1_glfw/: 1_glfw.cpp  CMakeLists.txt  README.md
src/1_hello_vulkan/: 1_hello_vulkan.cpp  CMakeLists.txt  README.md
src/2_hello_render_shader/: 2_hello_render_shader.cpp  CMakeLists.txt  README.md
src/2_triangle/: 2_triangle.cpp  CMakeLists.txt  data.hpp  init_helper.hpp
src/3_recreate_swapchain/: 3_recreate_swapchain.cpp  CMakeLists.txt
src/3_recreate_swapchain/shaders/: 3_recreate_swapchain_frag.spv  3_recreate_swapchain_vert.spv
src/4_object_viewer/: CMakeLists.txt  README.md  application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frameInfo.hpp  gameObject.cpp  gameObject.hpp  keyboardMovementController.cpp  keyboardMovementController.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  utils.hpp  vulkan.drawio
src/4_object_viewer/lightSystems/: point.cpp  point.hpp
src/4_object_viewer/renderSystems/: simple.cpp  simple.hpp
src/4_object_viewer/shaders/: compile.bat
src/5_hello_compute_shader/: 5_hello_compute_shader.cpp  CMakeLists.txt
src/5_hello_compute_shader/shaders/: 5_hello_compute_shader.comp  5_hello_compute_shader.spv
src/6_particle_system/: 6_particle_system.cpp  CMakeLists.txt
src/6_particle_system/shaders/: 6_particle_system.comp  6_particle_system_comp.spv
src/7_path_tracing/: 7_path_tracing.comp  7_path_tracing.cpp  CMakeLists.txt  test.cpp
src/7_path_tracing/shaders/: 7_path_tracing.comp  7_path_tracing.frag  7_path_tracing.vert  7_path_tracing_comp.spv  7_path_tracing_frag.spv  7_path_tracing_vert.spv
src/7_sdf/: 7_sdf.cpp  CMakeLists.txt
src/7_sdf/shaders/: 7_sdf.comp  7_sdf.frag  7_sdf.vert  7_sdf_comp.spv  7_sdf_frag.spv  7_sdf_vert.spv
src/8_ray_tracing_in_one_weekend/: 8_ray_tracing_in_one_weekend.cpp  CMakeLists.txt  constantData.hpp  image.hpp
src/8_ray_tracing_in_one_weekend/shaders/raytracing/: noSamples.spv  test.comp
src/HelloWindow/: CMakeLists.txt  HelloWindow.cpp  README.md
src/Triangle/: CMakeLists.txt  README.md  Triangle.cpp
src/helloComputeShader/: CMakeLists.txt  helloComputeShader.cpp  test.comp  test.spv
src/hello_compute_shader/: CMakeLists.txt  compute_shader.comp  compute_shader.spv  hello_compute_shader.cpp
src/particle_system/: main.cpp
src/particle_system/shaders/: shader.comp  shader.frag  shader.vert
src/path_tracing/: CMakeLists.txt  main.cpp  path_tracing.cpp  path_tracing_kernel.comp  path_tracing_kernel.glsl
src/rayTracingWithComputeShader/: CMakeLists.txt  camera.hpp  dataDump.h  main.cpp
src/rayTracingWithComputeShader/materials/: material.hpp
src/rayTracingWithComputeShader/shaders/raytracing/: test.spv
src/recreateSwapChain/: CMakeLists.txt  main.cpp
src/test_glfw/: CMakeLists.txt  README.md  test_glfw.cpp
src/view3DObject/: CMakeLists.txt  README.md  application.cpp  application.hpp  buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  frameInfo.hpp  gameObject.cpp  gameObject.hpp  keyboardMovementController.cpp  keyboardMovementController.hpp  main.cpp  mainWindow.cpp  mainWindow.hpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  swapChain.cpp  swapChain.hpp  utils.hpp
src/view3DObject/lightSystems/: point.cpp  point.hpp
src/view3DObject/models/jlceda/: 3D_PCB1_2023-11-19.mtl  index.mtl
src/view3DObject/renderSystems/: simple.cpp  simple.hpp
src/view3DObject/shaders/: compile.bat  point_light.frag  shader.vert  simple_shader.frag  simple_shader.vert
