add_subdirectory(1_hello_vulkan)
add_subdirectory(src/2_hello_render_shader)
add_subdirectory(src/3_recreate_swapchain)
# add_subdirectory(src/4_object_viewer)
add_subdirectory(src/5_hello_compute_shader)
add_subdirectory(src/6_particle_system)
add_subdirectory(7_path_tracing)
# add_subdirectory(src/8_ray_traing_in_one_weekend)
